
version 0.4.2 (cvs)
	
	Features
	- RFE #1054813 Privacy support

	Bug Fixes
	- Bug #1194631 Windows file transfer crashes gaim
	
version 0.4.1 (2005-05-01)

	Features
	- Support for File Transfers (mwServiceFileTransfer)
	- Support for getting/setting Aware attributes
	- Support sending the LoginCont message in response to a
	LoginRedirect
	- Support for multi-segment messages from NotesBuddy (fixes
	problems with large MIME, text, and HTML messages)
	
	Bug Fixes
	- Bug #1192747 Crash when someone initiate talk with me
	- Bug #1168421 crash when opening specific contacts
	- Problem with NAB group members not being announced after the
	initial group status update
	
version 0.4.0 (2005-03-18)

	- installed header file names have changed to now have a "mw_"
	prefix

	Features
	- RFE #994716 Support for Server-side Groups to Aware Service
	- RFE #1077794 NotesBuddy style formatting
	- Support for resolve service

	Bug Fixes
	- Bug #1008335 Error in common.c when compiling on x86_64
	- Bug #1021353 meanwhile won't build w/Sun GNOME2
	- Bug #1036056 meanwhile-CRITICAL - when add a buddy to my list
	- Bug #1089971 pkg-config file does not list liner flags
	- Bug #1110902 configure shouldn't set CFLAGS
	- Dumb crash when removing non-existant members from an aware list
	
version 0.3.1 (2004-08-05)

	- Fix [989872] Version incompatibility (0x80000200 errors)
	- Fix some st_list parsing problems

version 0.3.0 (2004-06-28)
		
	2004-06-27: Fixed bug #980572. Thanks a lot to Joe Marcus Clarke
	for all the debugging help!

	* common.c: privacy list has a name in it, who knew?

	* st_list.c: revamped the parsing and generation of sametime's
	buddy list format. Seems to be working alright, but there can be
	some serious ugliness with commas in user ids and in aliases.
	
	2004-06-23: Sametime blist format parser/generator seems to be
	working.

	* common.c: fixed a nasty crash/bug discovered by nosnilmot. Base
	type serialization wasn't correctly checking available buffer